--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@convex-dev/r2": "^0.6.2",
     "convex": "^1.23.0",
+    "install": "^0.13.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
