--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.24.8",
     "framer-motion": "^12.18.1",
+    "jimp": "^1.6.0",
     "lucide-react": "^0.522.0",
     "motion": "^12.18.1",
     "react": "^19.0.0",
