--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:frontend": "vite --open",
     "dev:backend": "convex dev",
     "predev": "convex dev --until-success && convex dashboard",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build && echo '/* /index.html 200' > dist/_redirects",
     "lint": "tsc && eslint .  --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
